--- a/src/Components/Writers/Writers.css
+++ b/src/Components/Writers/Writers.css
@@ -9,3 +9,27 @@
     position: sticky;
     top:0;
 }
+@media only screen and (max-width: 768px) {
+    .writers {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .cart {
+     
+     
+      padding: 10px;
+      box-shadow: 10px 10px 25px  rgb(88, 72, 72);
+      border-radius: 5px;
+      margin-top: 15px;
+      margin-left: 30px;
+      position: relative;
+    }
+   
+  }
+  @media only screen and (max-width: 468px) {
+    .writers {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+  
